--- a/commands.tex
+++ b/commands.tex
@@ -29,8 +29,11 @@
 \DeclareMathOperator{\ind}{ind}
 \DeclareMathOperator{\cokernel}{coker} 
 \DeclareMathOperator{\Hom}{Hom}
+\DeclareMathOperator{\Ext}{Ext}
 \DeclareMathOperator{\lExt}{\mathcal{E}\mathit{xt}} %local Ext
 \DeclareMathOperator{\lHom}{\mathcal{H}\mathit{om}} %local Hom
+\DeclareMathOperator{\dL}{\mathbf{L}} %derived left
+\DeclareMathOperator{\dR}{\mathbf{R}} %derived right
 \DeclareMathOperator{\RHom}{\mathbf{R}Hom} %derived usual Hom
 \DeclareMathOperator{\RlHom}{\mathbf{R}\mathcal{H}\mathit{om}} %derived local Hom
 \DeclareMathOperator{\RG}{\mathbf{R}\Gamma} %derived global sections
