--- a/body.tex
+++ b/body.tex
@@ -397,7 +397,7 @@ There is a generalization by Canonaco and Stellari which requires only that $\ma
 \end{definition}
 
 
-For example, line bundles on $\mathbb{P}^n$ and more generally on Fanos by Kodaira vanishing. Also, $\mathcal{O}_{E}(t)$ on a blowup at a point with exceptional divisor $E$. This is done by applying LES to the ideal sheaf sequence $$0\xrightarrow{}\mathcal{O}_{\tilde{X}} (-E)\xrightarrow{}\mathcal{O}_{\tilde{X}}\xrightarrow{}\mathcal{O}_{E}\xrightarrow{}0$$Then hom into $\mathcal{O}_{E}$. Have $$\mathrm{Ext}(\mathcal{O}(-E), \mathcal{O}_{E})=H^\bullet_{\tilde{ X}} (\mathcal{O}_{E}(E))\simeq H^\bullet_{E} (\mathcal{O}_{E}(-1))=0$$since $E=\mathbb{P}^{n-1}$. 
+For example, line bundles on $\mathbb{P}^n$ and more generally on Fanos by Kodaira vanishing. Also, $\mathcal{O}_{E}(t)$ on a blowup at a point with exceptional divisor $E$. This is done by applying LES to the ideal sheaf sequence $$0\xrightarrow{}\mathcal{O}_{\tilde{X}} (-E)\xrightarrow{}\mathcal{O}_{\tilde{X}}\xrightarrow{}\mathcal{O}_{E}\xrightarrow{}0$$Then hom into $\mathcal{O}_{E}$. Have $$\mathrm{Ext}(\mathcal{O}(-E), \mathcal{O}_{E})=H^\bullet_{\tilde{ X}} (\mathcal{O}_{E}(E))\simeq H^\bullet_{E} (\mathcal{O}_{E}(-1))=0$$since $E=\mathbb{P}^{n-1}$. Moreover, since $p^*\mathcal{O}_{X}=\mathcal{O}_{\tilde{X}}$, by adjunction we get $$\Ext(\mathcal{O}_{\tilde{X}}, \mathcal{O}_E)=\Ext(\mathcal{O}_X, p_*\mathcal{O}_E)=\Ext(\mathcal{O}_X, \mathcal{O}_p)=\mathbb{C} \text{ in degree }0$$
 
 Many homogenous vector bundles are exceptional.
 
@@ -409,88 +409,102 @@ Many homogenous vector bundles are exceptional.
 
 Nonexamples: deformable objects, e.g. skyscraper sheaves, line bundles on curves.
 
-On Calabi-Yau's, there are no exceptional objects by Serre duality. However, they do admit spherical objects.
+\begin{remark}
+    Calabi-Yau's don't admit exceptional objects by Serre duality. However, they do admit spherical objects, e.g. $\mathcal{O}_C$ for a rational curve $C$ in a K3 surface.
+\end{remark}
 
-> [!definitionred] Exceptional collections
-> A collection $E_i$ is exceptional if each $E_i$ is exceptional and there are no homs from right to left: $\mathrm{RHom}(E_{i}, E_{j})=0, i>j$.
+\begin{definition}{Exceptional collections}{Exceptional collections}
+    A collection $E_i$ is exceptional if each $E_i$ is exceptional and there are no homs from right to left: $\mathrm{RHom}(E_{i}, E_{j})=0, i>j$.
+\end{definition}
 
-*Example:* $\mathcal{O},\dots,\mathcal{O}(n)$ on projective space. Cannot have more, since then will have the cohomology of the canonical bundle $\omega=\mathcal{O}(-n-1)$ which is nonzero.
 
-More generally, for a Fano, $\omega_{X}=\mathcal{O}_{X}(-k)$ is antiample. Then $\mathcal{O}, \dots, \mathcal{O}(k-1)$ is exceptional.
+For example, $\mathcal{O},\dots,\mathcal{O}(n)$ on projective space. Cannot have more, since then will have the cohomology of the canonical bundle $\omega=\mathcal{O}(-n-1)$ which is nonzero. In fact, Beilinson's theorem shows that these form a semiorthogonal decomposition.
 
-For a blowup $\tilde{X}\xrightarrow{}\mathbb{P}^2$ we have line bundles $\mathcal{O}_{E}(-1), \mathcal{O}, \mathcal{O}(H), \mathcal{O}(2H)$ and moreover $$\mathrm{R}\Gamma(\mathcal{O}_{\tilde{X}})=\mathrm{R}\Gamma \,\mathrm{R}f_{*}\mathcal{O}_{\tilde{ X}}=\mathrm{R}\Gamma \mathcal{O}_{\mathbb{P}^2}=k[0]$$since the higher pushforwards of a blowup vanish. So the objects are exceptional. They form an exceptional collection since $\mathcal{O}_{\tilde{X}}(H)=f^*\mathcal{O}(1)$ and then we can use adjunction. The exceptional collection downstairs gives us an exceptional collection upstairs. We also need to check $$\mathrm{Ext}_{\tilde{ X}}(\mathcal{O}(tH), \mathcal{O}_{E}(-1))=\mathrm{Ext}_{\mathbb{P}^2}(\mathcal{O}(t), \mathrm{R}f_{*}\mathcal{O}_{E}(-1))=0$$For this, we can use the base change formula to see that $\mathrm{R}f_{*}\mathcal{O}_{E}(-1)=0$ since by base change this is the line bundle on the exceptional divisor pushed down to a point, i.e. the cohomology of the tautological line bundle.
+More generally, for a Fano, $\omega_{X}=\mathcal{O}_{X}(-k)$ is antiample. Then $\mathcal{O}, \dots, \mathcal{O}(k-1)$ is exceptional. We will come back to this when we discuss the cubic fourfold.
 
-We put $E \perp F$ whenever $\mathrm{RHom}(E,F)=0$. This is not a symmetric relation! It is on Calabi-Yau's. 
+% For a blowup $\tilde{X}\xrightarrow{}\mathbb{P}^2$ we have line bundles $\mathcal{O}_{E}(-1), \mathcal{O}, \mathcal{O}(H), \mathcal{O}(2H)$ and moreover $$\mathrm{R}\Gamma(\mathcal{O}_{\tilde{X}})=\mathrm{R}\Gamma \,\mathrm{R}f_{*}\mathcal{O}_{\tilde{ X}}=\mathrm{R}\Gamma \mathcal{O}_{\mathbb{P}^2}=k[0]$$since the higher pushforwards of a blowup vanish. So the objects are exceptional. They form an exceptional collection since $\mathcal{O}_{\tilde{X}}(H)=f^*\mathcal{O}(1)$ and then we can use adjunction. The exceptional collection downstairs gives us an exceptional collection upstairs. We also need to check $$\mathrm{Ext}_{\tilde{ X}}(\mathcal{O}(tH), \mathcal{O}_{E}(-1))=\mathrm{Ext}_{\mathbb{P}^2}(\mathcal{O}(t), \mathrm{R}f_{*}\mathcal{O}_{E}(-1))=0$$For this, we can use the base change formula to see that $\mathrm{R}f_{*}\mathcal{O}_{E}(-1)=0$ since by base change this is the line bundle on the exceptional divisor pushed down to a point, i.e. the cohomology of the tautological line bundle.
 
-> [!definitionred] Full exceptional collection
-> An exceptional collection is full if you can generate every object by sums, shifts and cones.
+Notation: we put $E \perp F$ whenever $\mathrm{RHom}(E,F)=0$. This is not a symmetric relation! It is on Calabi-Yau's. 
 
-> [!theoremred] Beilinson's theorem
-> On $\mathbb{P}^n,$ the exceptional collection $\mathcal{O},\dots,\mathcal{O}(n)$ is full.
+\begin{definition}{Full exceptional collection}{Full exceptional collection}
+    An exceptional collection is full if you can generate every object by sums, shifts and cones.
 
-Use Koszul resolution of skyscrapers to see they are contained in this subcategory. Then, find the orthogonal complement is empty, for which we need the collection to be exceptional.
+\end{definition}
 
-Suppose that $\mathrm{RHom}(\mathcal{O}_{p}, \mathcal{F})=0,\forall p \in X$. Use the Grothendieck spectral sequence $$\mathrm{R}^p\mathrm{Hom}(\mathcal{O}_{p}, \mathcal{H}^q \mathcal{F})\implies \mathrm{R}^{p+q}\mathrm{Hom}(\mathcal{O}_{p},\mathcal{F})=0 $$If we choose $q$ maximal with $\mathcal{H}^q\mathcal{F}\neq 0$ and $p\in \mathrm{supp}\,\mathcal{F}$, then we will have a nonzero term in the top right corner of the second page, which survives to infinity. This is a contradiction, and hence either $\mathcal{F}=0$ or all the cohomologies are zero. 
+\begin{theorem}{Beilinson}{Beilinson's theorem}
+    On $\mathbb{P}^n,$ the exceptional collection $\mathcal{O},\dots,\mathcal{O}(n)$ is full.
+\end{theorem} 
 
- Lecture 11 and 12
+% one method of proof: use Koszul resolution of skyscrapers to see they are contained in this subcategory. Then, find the orthogonal complement is empty, for which we need the collection to be exceptional. Suppose that $\mathrm{RHom}(\mathcal{O}_{p}, \mathcal{F})=0,\forall p \in X$. Use the Grothendieck spectral sequence $$\mathrm{R}^p\mathrm{Hom}(\mathcal{O}_{p}, \mathcal{H}^q \mathcal{F})\implies \mathrm{R}^{p+q}\mathrm{Hom}(\mathcal{O}_{p},\mathcal{F})=0 $$If we choose $q$ maximal with $\mathcal{H}^q\mathcal{F}\neq 0$ and $p\in \mathrm{supp}\,\mathcal{F}$, then we will have a nonzero term in the top right corner of the second page, which survives to infinity. This is a contradiction, and hence either $\mathcal{F}=0$ or all the cohomologies are zero. 
 
-Want to show that for a blowup $\mathrm{R}f_{*}\mathcal{O}_{\tilde{X}}=\mathcal{O}_{X}$. By Zariski's main theorem, have that it's true for $R^0$. Have projective bundle $\mathbb{P}^n\xrightarrow{}E\xrightarrow{}Z$ and a SES $$0\xrightarrow{}\mathcal{O}_{\tilde{X}}(-E)\xrightarrow{}\mathcal{O}_{\tilde{ X}}\xrightarrow{}\mathcal{O}_{E}\xrightarrow{ }0$$Hence, $\mathrm{R}f_{*}\mathcal{O}_{E}=\mathcal{O}_{Z}$. When we push down to $X$ under the LES, the first level is the ideal sheaf sequence for $Z$. Can twist by $-E$, hence $\mathcal{O}_{E}(E)=\mathcal{O}_{E}(1)$. Want to show these have no higher pushforwards. In particular, $R^{>0}f_{*}(\mathcal{O}(-nE))=0, n\gg 0$. But $\mathcal{O}_{X}(-E)=\mathcal{O}_{f}(1)$ is relatively ample, so can use Serre vanishing? Not sure.
+% Junk on blowup of P2
+% Want to show that for a blowup $\mathrm{R}f_{*}\mathcal{O}_{\tilde{X}}=\mathcal{O}_{X}$. By Zariski's main theorem, have that it's true for $R^0$. Have projective bundle $\mathbb{P}^n\xrightarrow{}E\xrightarrow{}Z$ and a SES $$0\xrightarrow{}\mathcal{O}_{\tilde{X}}(-E)\xrightarrow{}\mathcal{O}_{\tilde{ X}}\xrightarrow{}\mathcal{O}_{E}\xrightarrow{ }0$$Hence, $\mathrm{R}f_{*}\mathcal{O}_{E}=\mathcal{O}_{Z}$. When we push down to $X$ under the LES, the first level is the ideal sheaf sequence for $Z$. Can twist by $-E$, hence $\mathcal{O}_{E}(E)=\mathcal{O}_{E}(1)$. Want to show these have no higher pushforwards. In particular, $R^{>0}f_{*}(\mathcal{O}(-nE))=0, n\gg 0$. But $\mathcal{O}_{X}(-E)=\mathcal{O}_{f}(1)$ is relatively ample, so can use Serre vanishing? Not sure.
 
-> [!theoremred] Theorem (Kapranov) 
-> Let $\mathcal{U}\xrightarrow{}\mathrm{Gr}_{k}(n)$ be the tautological bundle over the Grassmanian. Then the Schur functors $\mathrm{Schur}^\lambda \mathcal{U}^\lor$ for $\lambda$ a Young diagram form a full exceptional collection.
+% > [!theoremred] Theorem (Kapranov)  Let $\mathcal{U}\xrightarrow{}\mathrm{Gr}_{k}(n)$ be the tautological bundle over the Grassmanian. Then the Schur functors $\mathrm{Schur}^\lambda \mathcal{U}^\lor$ for $\lambda$ a Young diagram form a full exceptional collection.
 
- Blowup exceptional collection
-Let's go back to the example of the blowup of $\mathbb{P}^2$ at a point. For any $p\notin E$, we have that $\mathcal{O}_{p}=\mathrm{L}f^*\mathcal{O}_{f(p)}$ which we can Koszul resolve on the base then pull back to get $$\mathcal{O}_{\tilde{X}}(-2H)\xrightarrow{}\mathcal{O}_{\tilde{ X}}(-H)^2\xrightarrow{}\mathcal{O}_{\tilde{X}}\xrightarrow{}\mathcal{O}_{p}$$So these skyscraper sheaves are in the span of $\mathcal{O},\mathcal{O}(H),\mathcal{O}(2H)$, after twisting by $2H$. When $p\in E$, then $f(p)$ is in the center. By exercise, have $$\mathrm{L}_{i}f^*\mathcal{O}_{f(p)}=\begin{cases}
-\mathcal{O}_{E},i=0 \\
-\mathcal{O}_{E}(-1), i=1
-\end{cases}$$
-Hence, have a map $\mathcal{O}_{E}(-1)[1]\xrightarrow{}\mathrm{L}f^*\mathcal{O}_{f(p)}$ since all complexes admit a map from their last cohomology and a map to their first cohomology. The cone of this map has to be $\mathcal{O}_{E}$ by looking at the LES in cohomology. 
+%Blowup exceptional collection
+%Let's go back to the example of the blowup of $\mathbb{P}^2$ at a point. For any $p\notin E$, we have that $\mathcal{O}_{p}=\mathrm{L}f^*\mathcal{O}_{f(p)}$ which we can Koszul resolve on the base then pull back to get $$\mathcal{O}_{\tilde{X}}(-2H)\xrightarrow{}\mathcal{O}_{\tilde{ X}}(-H)^2\xrightarrow{}\mathcal{O}_{\tilde{X}}\xrightarrow{}\mathcal{O}_{p}$$So these skyscraper sheaves are in the span of $\mathcal{O},\mathcal{O}(H),\mathcal{O}(2H)$, after twisting by $2H$. When $p\in E$, then $f(p)$ is in the center. By exercise, have $$\mathrm{L}_{i}f^*\mathcal{O}_{f(p)}=\begin{cases}
+%\mathcal{O}_{E},i=0 \\
+%\mathcal{O}_{E}(-1), i=1
+%\end{cases}$$
+%Hence, have a map $\mathcal{O}_{E}(-1)[1]\xrightarrow{}\mathrm{L}f^*\mathcal{O}_{f(p)}$ since all complexes admit a map from their last cohomology and a map to their first cohomology. The cone of this map has to be $\mathcal{O}_{E}$ by looking at the LES in cohomology. 
 
-Finally, have a SES $$0\rightarrow \mathcal{O}_{E}(-1)\xrightarrow{}\mathcal{O}_{E}\xrightarrow{}\mathcal{O}_{p}\xrightarrow{}0$$This shows that the exceptional collection is full. 
+%Finally, have a SES $$0\rightarrow \mathcal{O}_{E}(-1)\xrightarrow{}\mathcal{O}_{E}\xrightarrow{}\mathcal{O}_{p}\xrightarrow{}0$$This shows that the exceptional collection is full. 
 
 %Quadric in P5 Have that $\omega_{Q}=\mathcal{O}(-4)$ so have exceptional collection of line bundles up to degree 4. We will show this is not full. This contains a plane $P\subset Q$. Consider $\mathcal{O}_{P}(1)$. Then $$\mathrm{RHom}(\mathcal{O}_{Q}(3), \mathcal{O}_{P}(1))=\mathrm{R\Gamma}(\mathcal{O}_{P}(-2))=0$$Similarly with $\mathcal{O}_{Q}(2)$. However, with $\mathcal{O}_{Q}(1)$ get $\mathrm{R}\Gamma (\mathcal{O}_{P})=k$. So it is not orthogonal! Consider the kernel of the restriction morphism $$0\xrightarrow{}\mathcal{I}_{P/Q}(1)\xrightarrow{}\mathcal{O}_{Q}(1)\xrightarrow{}\mathcal{O}_{P}(1)\xrightarrow{}0$$We claim that the ideal sheaf is orthogonal to the line bundles. Up to a shift, this is a cone of two things which were already orthogonal to $\mathcal{O}(2), \mathcal{O}(3)$ but orthogonality is closed under taking cones. So we need only worry about $\mathcal{O}(1)$. Then use LES to conclude that $\mathrm{Ext}^\bullet(\mathcal{O}_{Q}(1), \mathcal{I}(1))=0$. What about $\mathcal{O}_{Q}$?
 
-Via the LES again, we can conclude that $\mathrm{Ext}^\bullet(\mathcal{O}_{Q}, \mathcal{I})=k^3$ concentrated in degree 3, given by the three linear forms cutting out $P$. So not orthogonal and play the same game again: $$0\xrightarrow{}\mathcal{S}\xrightarrow{}\mathcal{O}_{Q}^3\xrightarrow{}\mathcal{I}\xrightarrow{}0$$Then $\mathcal{S}$ is orthogonal to $\mathcal{O}, \mathcal{O}(1),\dots,\mathcal{O}(3)$. It is of rank $2$ so is nonzero. It is a spinor bundle? Moreover, it is exceptional - see exercises.
+%Via the LES again, we can conclude that $\mathrm{Ext}^\bullet(\mathcal{O}_{Q}, \mathcal{I})=k^3$ concentrated in degree 3, given by the three linear forms cutting out $P$. So not orthogonal and play the same game again: $$0\xrightarrow{}\mathcal{S}\xrightarrow{}\mathcal{O}_{Q}^3\xrightarrow{}\mathcal{I}\xrightarrow{}0$$Then $\mathcal{S}$ is orthogonal to $\mathcal{O}, \mathcal{O}(1),\dots,\mathcal{O}(3)$. It is of rank $2$ so is nonzero. It is a spinor bundle? Moreover, it is exceptional - see exercises.
 
-In Kapranov's paper, if we take planes $P_+, P_-$ from two families on $Q,$ then $S_+, S_-$ are exceptional and $$\mathcal{D}^b(Q)=\langle S_{+},S_{-}, \mathcal{O}_{Q}, \mathcal{O}_{Q}(1), \mathcal{O}_{Q}(2), \mathcal{O}_{Q}(3)\rangle$$
-See: Bondal-Orlov on two quadric intersecting, Kuznetsov on cubic fourfold.
+%In Kapranov's paper, if we take planes $P_+, P_-$ from two families on $Q,$ then $S_+, S_-$ are exceptional and $$\mathcal{D}^b(Q)=\langle S_{+},S_{-}, \mathcal{O}_{Q}, \mathcal{O}_{Q}(1), \mathcal{O}_{Q}(2), \mathcal{O}_{Q}(3)\rangle$$
+%See: Bondal-Orlov on two quadric intersecting, Kuznetsov on cubic fourfold.
 
  Semiorthogonal decompositions
 
-> [!definitionred] Admissible subcategory
-> A full subcategory $\mathcal{A}$ closed under shifts and cones is admissible if the inclusion admits both a left and a right adjoint.
+\begin{definition}{Admissible subcategory}{Admissible subcategory}
+    A full subcategory $\mathcal{A}$ closed under shifts and cones is admissible if the inclusion admits both a left and a right adjoint.
+\end{definition}
 
 For example, the image of a fully faithful functor $\mathcal{D}(Y)\xrightarrow{}\mathcal{D}(X)$ which is induced by a FM kernel, so has adjoints given by Serre functors.
 
 Nonexample: the subcategory generated by skyscrapers. This has empty orthogonal complement, but everything in it has finite support. But if one has an admissible subcategory with empty orthogonal, it actually generates the whole category.
 
-> [!propositionred] Proposition
-> If $\mathcal{A}$ is admissible and $\mathcal{A}^\perp=0$, then $\mathcal{A}=\mathcal{D}(X)$.
-> > [!proofred] Proof
-> > We first notice that by having adjoints, if $B\in\mathcal{A}^\perp$ then for all $A$ we have $$\mathrm{RHom}(IA, B)=\mathrm{RHom}(A,RB)=0$$By Yoneda, this implies $RB=0$, so $\mathcal{A}^\perp = \ker R$. Similarly, $^\perp \mathcal{A}=\ker L.$ Can use counit of adjunction to get map $IRB\xrightarrow{}B$. The cone is in $\mathcal{A}^\perp=0$, so $B\in \mathcal{A}$.  The reason is that for any $A\in \mathcal{A}$, we have an LES $$\dots\xrightarrow{}\mathrm{Hom}(IA, IRB)\xrightarrow{}\mathrm{Hom}(IA, B)\xrightarrow{}\mathrm{Hom}(IA,cone)\xrightarrow{}\dots$$But $\mathrm{Hom}(IA,IRB)=\mathrm{Hom}(A,RIRB), \mathrm{Hom}(IA,B)=\mathrm{Hom}(A,RB)$ and these two are isomorphic by adjoint triangle. The map is actually given by $R\epsilon, \epsilon: IR\xrightarrow{ }1$.  But $I$ is fully faithful, so $\eta$ is an isomorphism and hence $R\epsilon$ is an isomorphism. 
+\begin{proposition}{}{}
+    If $\mathcal{A}$ is admissible and $\mathcal{A}^\perp=0$, then $\mathcal{A}=\mathcal{D}(X)$.
+\end{proposition}
+\begin{proof}[Proof]
+    We first notice that by having adjoints, if $B\in\mathcal{A}^\perp$ then for all $A$ we have $$\mathrm{RHom}(IA, B)=\mathrm{RHom}(A,RB)=0$$By Yoneda, this implies $RB=0$, so $\mathcal{A}^\perp = \ker R$. Similarly, $^\perp \mathcal{A}=\ker L.$ Can use counit of adjunction to get map $IRB\xrightarrow{}B$. The cone is in $\mathcal{A}^\perp=0$, so $B\in \mathcal{A}$.  The reason is that for any $A\in \mathcal{A}$, we have an LES $$\dots\xrightarrow{}\mathrm{Hom}(IA, IRB)\xrightarrow{}\mathrm{Hom}(IA, B)\xrightarrow{}\mathrm{Hom}(IA,cone)\xrightarrow{}\dots$$But $\mathrm{Hom}(IA,IRB)=\mathrm{Hom}(A,RIRB), \mathrm{Hom}(IA,B)=\mathrm{Hom}(A,RB)$ and these two are isomorphic by adjoint triangle. The map is actually given by $R\epsilon, \epsilon: IR\xrightarrow{ }1$.  But $I$ is fully faithful, so $\eta$ is an isomorphism and hence $R\epsilon$ is an isomorphism. 
+\end{proof}
+
+\begin{remark}{}{}
+     Given an exceptional $E$, can think of it as an object on $\mathcal{D}(pt\times X)$ and its induced map $FM_{E}:\mathcal{D}(pt)\xrightarrow{}\mathcal{D}(X)$ is fully faithful, sending a vector space $V\mapsto V\otimes E$. The endomorphisms on both sides agree: $\mathrm{Ext}^\bullet(k,k)=k=\mathrm{Ext}^\bullet(E,E)$. The right adjoint is given by the kernel $E^\lor$ so it sends $F\mapsto \pi_* (E^\lor \otimes F)=\Ext^\bullet(E,F)$, since derived projection is taking cohomology. The counit provides us with an evaluation map $$E\otimes \Ext^\bullet(E,F)\xrightarrow{ev}F$$In general, objects of $\mathcal{D}(X)$ correspond to functors from $\mathcal{D}(pt)$ and exceptionals correspond to fully faithful functors. We will see that spherical twists come from taking cones on the (co)evaluation maps.
+\end{remark}
 
 
-Note: given exceptional $E$, can think of it as an object on $\mathcal{D}(pt\times X)$ and its induced map $FM_{E}:\mathcal{D}(pt)\xrightarrow{}\mathcal{D}(X)$ is fully faithful, sending $V\mapsto V\otimes E$. The end-morphisms on both sides agree: $\mathrm{Ext}(k,k)=k=\mathrm{Ext}(E,E)$. This has a tensor-hom adjunction: the right adjoint is $F\mapsto \mathrm{RHom}(E,F)$. The counit provides us with an evaluation map $$E\otimes \mathrm{RHom}(E,F)\xrightarrow{ev}F$$In general, objects of $\mathcal{D}(X)$ correspond to functors from $\mathcal{D}(pt)$ and exceptionals correspond to fully faithful functors. 
+\begin{definition}{Semi-orthogonal decomposition}{Semi-orthogonal decomposition}
+    A semiorthogonal decomposition is a sequence of admissible subcategories $\mathcal{A}_{i}$ such that $\mathcal{A}_{j}\perp \mathcal{A}_{i}, i<j$ and they generate $\mathcal{D}(X)$.
+\end{definition}
 
-> [!definitionred] Semi-orthogonal decomposition
-> A semiorthogonal decomposition is a sequence of admissible subcategories $\mathcal{A}_{i}$ such that $\mathcal{A}_{j}\perp \mathcal{A}_{i}, i<j$ and they generate $\mathcal{D}(X)$.
 
-> [!propositionred] Projective bundle formula for derived categories
-> Given vector bundle $E\rightarrow X$ of rank $n+1$ we have a semiorthogonal decomposition $$\mathcal{D}(\mathbb{P}(E))=\langle f^*\mathcal{D}(X), f^*\mathcal{D}(X)\otimes \mathcal{O}(1),\dots, f^*\mathcal{D}(X)\otimes \mathcal{O}(n)\rangle$$
+\begin{proposition}{Projective bundle formula for derived categories}{Projective bundle formula for derived categories}
+    Given vector bundle $E\rightarrow X$ of rank $n+1$ we have a semiorthogonal decomposition $$\mathcal{D}(\mathbb{P}(E))=\langle f^*\mathcal{D}(X), f^*\mathcal{D}(X)\otimes \mathcal{O}(1),\dots, f^*\mathcal{D}(X)\otimes \mathcal{O}(n)\rangle$$
+\end{proposition}
 
-We see that $f^*$ is fully faithful: $$\mathrm{RHom}(f^*a,f^*b)=\mathrm{RHom}(a, f_{*} (f^*b\otimes \mathcal{O}_{\mathbb{P}(E)}))=\mathrm{RHom}(a, b)$$since $f_*\mathcal{O}_{\mathbb{P}(E)}=\mathcal{O}_{X}$. So each of the bits is admissible. Now need to show there are no Rhoms: $$\begin{gathered}
-\mathrm{RHom}(f^*a\otimes \mathcal{O}(i), f^*b\otimes \mathcal{O}(j))=\mathrm{RHom}(a, f_{*}(f^*b\otimes \mathcal{O}(j-i)))=\\
-=\mathrm{RHom}(a, b\otimes f_{*}\mathcal{O}(j-i))=0
+\begin{proof}
+    We see that $f^*$ is fully faithful: $$\RHom(f^*a,f^*b)=\RHom(a, f_{*} (f^*b\otimes \mathcal{O}_{\mathbb{P}(E)}))=\RHom(a, b)$$since $f_*\mathcal{O}_{\mathbb{P}(E)}=\mathcal{O}_{X}$. So each of the bits is admissible. Now need to show there are no Rhoms: $$\begin{gathered}
+\RHom(f^*a\otimes \mathcal{O}(i), f^*b\otimes \mathcal{O}(j))=\RHom(a, f_{*}(f^*b\otimes \mathcal{O}(j-i)))=\\
+=\RHom(a, b\otimes f_{*}\mathcal{O}(j-i))=0
 \end{gathered}$$for $i<j$. Finally, need to show generation. For a point $p\in \mathbb{P}(E)$, have Koszul resolution on the fibers. But a fiber has $\mathcal{O}_{F}=f^*\mathcal{O}_{q}$ where $f(F)=q$. So can generate everything fiberwise via Beilinson.  
+\end{proof}
 
 This allows us to talk about blowups in general! Since over the exceptional locus we have a projective bundle. 
 
 Given a blowup $f:\tilde{X}\xrightarrow{}X$, we still have that $f^*$ is fully faithful, so we have an admissible subcategory $f^*\mathcal{D}(X)$. Moreover, have a fully faithful functor $\varphi_{t}:\mathcal{D}(Z)\xrightarrow{}\mathcal{D}(\tilde{X})$ given by sending $F$ to $j_{*}(f^*F\otimes \mathcal{O}_{E}(tE)), t\in \mathbb{Z}$. This is a Fourier-Mukai transform with kernel $\mathcal{O}_{E}(tE)$.
 
-*Exercise:* find the right adjoint of this and show it composes to identity.
+%*Exercise:* find the right adjoint of this and show it composes to identity.
 
-> [!theoremred] Theorem (Bondal-Orlov)
-> $$\mathcal{D}(\tilde{X})=\langle \varphi_{{k-1}}\mathcal{D}(Z),\dots,\varphi_{1}\mathcal{D}(Z), f^*\mathcal{D}(X)\rangle$$
+\begin{theorem}{Bondal-Orlov blowup formula}{Bondal-Orlov blowup formula}
+    $$\mathcal{D}(\tilde{X})=\langle \varphi_{{k-1}}\mathcal{D}(Z),\dots,\varphi_{1}\mathcal{D}(Z), f^*\mathcal{D}(X)\rangle$$
+\end{theorem}
 
 Compare with the formula for cohomology!
 
